--- a/lib/generators/core_merchant/templates/core_merchant.erb
+++ b/lib/generators/core_merchant/templates/core_merchant.erb
@@ -1,5 +1,5 @@
 # Created by: rails generate core_merchant:install --customer_class=<%= @customer_class %>
 
 CoreMerchant.configure do |config|
-  config.customer_class = <%= @customer_class %>
+  config.customer_class = "<%= @customer_class %>"
 end
